--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <!-- Color theme for statusbar -->
     <meta name="theme-color" content="#2196f3">
 	<title>React Framework7</title>
-	<link rel="stylesheet" href="src/framework7.bundle.min.css" />
+	<link rel="stylesheet" href="src/css/framework7.bundle.min.css" />
 </head>
 <body>
   <div id="root"></div>
