--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
     <!-- Color theme for statusbar -->
     <meta name="theme-color" content="#2196f3">
 	<title>React Framework7</title>
+
+	<style type="text/css">
+		html, body , * {
+			-webkit-font-smoothing: subpixel-antialiased !important;
+			-moz-osx-font-smoothing: grayscale  !important;
+			text-rendering:optimizeLegibility  !important;
+		}
+	</style>
+
 	<link rel="stylesheet" href="src/css/framework7.bundle.min.css" />
 </head>
 <body>
